--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+body{
+    background-image: url(image/bg.jpg);
+    background-repeat: no-repeat;
+}
 /**Alterna o tamanho do mosquito **/
 .mosquito1{
     width: 50px;
@@ -17,4 +21,24 @@
 }
 .ladoB{
     transform: scaleX(-1);
+}
+
+/**Cenário do App **/
+.painel{
+    position: absolute;
+    width: 190px;
+    padding: 10px;
+    left: 0px;
+    bottom: 0px;
+    border-top: 1px solid #fff;
+    background-color: #fff;
+    opacity: 0.7;
+}
+.vidas{
+    float: left;
+}
+.cronometro{
+    float: left;
+    font-size: 20px;
+    font-weight: bold;
 }
